# crewai-flow

1_basic_flow/: README.md
3_structured_flow/: structured_flow.py
4_conditional_flows/: 1_or_flow.py  2_and_flow.py  3_router_flow.py
5_flows_with_crews/demo_flow/: README.md  crewai_flow.html  poem.txt
6_write_a_book_with_flows/write_a_book_with_flows/: Current State of AI September 2024 - Result.md  pyproject.toml
7_travel_planner_agentic_system/travel_planner_agentic_system/: README.md  USAGE_EXAMPLES.md  crewai_flow.html  demo.py  pyproject.toml  run.py  test_input.py  travel_plan_Taiwan_Taipei_2025-09-30.json  travel_plan_Taiwan_Taipei_2025-09-30.md  travel_plan_Tokyo_Japan_2024-03-15.json  travel_plan_Tokyo_Japan_2024-03-15.md
7_travel_planner_agentic_system/travel_planner_agentic_system/src/travel_planner_agentic_system/: main.py  types.py
7_travel_planner_agentic_system/travel_planner_agentic_system/src/travel_planner_agentic_system/crews/destination_research_crew/: __init__.py  destination_research_crew.py
7_travel_planner_agentic_system/travel_planner_agentic_system/src/travel_planner_agentic_system/crews/destination_research_crew/config/: agents.yaml  tasks.yaml
7_travel_planner_agentic_system/travel_planner_agentic_system/src/travel_planner_agentic_system/crews/itinerary_planning_crew/: __init__.py  itinerary_planning_crew.py
7_travel_planner_agentic_system/travel_planner_agentic_system/src/travel_planner_agentic_system/crews/itinerary_planning_crew/config/: agents.yaml  tasks.yaml
crewai-flows-crash-course-main/: README.md  requirements.txt
(+9 files in other folders)
