[project]
name = "travel_planner_agentic_system"
version = "0.1.0"
description = "travel_planner_agentic_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
]

[project.scripts]
kickoff = "travel_planner_agentic_system.main:kickoff"
run_crew = "travel_planner_agentic_system.main:kickoff"
plot = "travel_planner_agentic_system.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
